Minor Bug Fix (TOV Function)

--- a/GR3 + Zerilli2.ipynb
+++ b/GR3 + Zerilli2.ipynb
@@ -265,6 +265,7 @@
     "    r_max = 20 * km2cm\n",
     "    max_iter = n_iter_max\n",
     "    dr = r_max/max_iter\n",
+    "    m_max = 0\n",
     "    if progress:\n",
     "        pbar = tqdm(total=max_iter)\n",
     "    while r.successful() and (np.real(r.y[0]) >= p_min):\n",
@@ -272,6 +273,7 @@
     "        integral = r.integrate(r.t+dr)\n",
     "        if progress:\n",
     "            pbar.update(1)\n",
+    "        # Break conditions\n",
     "        if i > max_iter:\n",
     "            print(\"[STATUS] max_iter reached\")\n",
     "            break\n",
@@ -279,6 +281,9 @@
     "            break\n",
     "        if not r.successful():\n",
     "            break\n",
+    "        if r.y[1] < m_max:\n",
+    "            break \n",
+    "        m_max = max(r.y[1], m_max)\n",
     "        results.append(integral)\n",
     "        r_list.append(r.t+dr)\n",
     "    if progress:\n",
@@ -2696,6 +2701,109 @@
       "[STATUS] max_iter reached\n",
       "[STATUS] max_iter reached\n",
       "Warning: Maximum number of iterations has been exceeded.\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "Warning: Maximum number of iterations has been exceeded.\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "Warning: Maximum number of iterations has been exceeded.\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
+      "[STATUS] max_iter reached\n",
       "[STATUS] max_iter reached\n",
       "[STATUS] max_iter reached\n",
       "[STATUS] max_iter reached\n",
